--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "contact-list",
+  "homepage": "https://klarala13.github.io/contact-list/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +9,8 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "homepage": "https://klarala13.github.io/contact-list/"
   },
   "scripts": {
     "start": "react-scripts start",
