--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1",
-    "homepage": "https://klarala13.github.io/contact-list/"
+    "react-scripts": "3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "node deploy"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,6 +35,7 @@
     ]
   },
   "devDependencies": {
-    "ftp-deploy": "^2.3.3"
+    "ftp-deploy": "^2.3.3",
+    "gh-pages": "^3.1.0"
   }
 }
